# image_processor

./: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  FilterRegistry.cpp  FilterRegistry.h  FilterUtils.h  Utils.h  abacaba.cpp  abacaba.h  help.h  image_processor.cpp  readme.md
filters/: BlurFilter.cpp  BlurFilter.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  Filter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpFilter.cpp  SharpFilter.h  SunFadeFilter.cpp  SunFadeFilter.h
images/: Image.cpp  Image.h
io/: BMPReader.cpp  BMPReader.h  BMPTypes.h  BMPWriter.cpp  BMPWriter.h  ImageFormatFactory.cpp  ImageFormatFactory.h  Reader.h  Writer.h
